Attempt to use jquery loads to separate out template bits

--- a/index.html
+++ b/index.html
@@ -15,43 +15,22 @@
 </head>
 
 <body>
-    <!-- header -->
-    <div class="fluid-container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h1 class="text-center">JT Mechkowski</h1>
-            </div>
-        </div>
-        <!-- menu -->
-        <div class="row">
-            <nav class="navbar navbar-expand-lg">
-                <a class=navbar-brand href="#">jtmechkowski.com</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Coding Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"></a>
-                        </li>
-                    </ul>
-            </nav>
-        </div>
-        <!-- end menu-->
-    </div>
-    <!-- end header -->
+    <header>
+        <div data-includeHTML=".\html-common\_HeaderPartial.html"></div>
+    </header>
     <!-- body -->
     <div class="container rounded-bottom">
         BODY
     </div>
+
+    <script>
+        // Load Header
+        $(document).ready(function () {
+            $("div[data-includeHTML]").each(function () {
+                $(this).load($(this).attr("data-includeHTML"));
+            });
+        });
+    </script>
     <!-- script for JS functional Boostrap 5.1 do not remove must be at the bottom very important -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
