--- a/html-common/_MenuPartial.html
+++ b/html-common/_MenuPartial.html
@@ -9,13 +9,35 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Coding
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">NodeJS Api Server's</a></li>
+                      <li><a class="dropdown-item" href="#">NodeJS Other</a></li>
+                      <li><a class="dropdown-item" href="#">Unity</a></li>
+                      <li><a class="dropdown-item" href="#">C# & .Net</a></li>
+                      <li><a class="dropdown-item" href="#">Python</a></li>
+                      <li><a class="dropdown-item" href="#">Web & Other</a></li>
+                    </ul>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        Computer Networking
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Coding Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"></a>
+                    <a class="nav-link active" aria-current="page" href="#">
+                        Windows Platform Administration
+                    </a>
+                    <a class="nav-link active" aria-current="page" href="#">
+                        Linux Administration
+                    </a>
                 </li>
             </ul>
     </nav>
