--- a/html-common/_HeaderPartial.html
+++ b/html-common/_HeaderPartial.html
@@ -5,6 +5,14 @@
             <h1 class="text-center">JT Mechkowski</h1>
         </div>
     </div>
-
+    <div data-includeHTML=".\html-common\_MenuPartial.html"></div>
+    <script>
+        // Load Menu
+        $(document).ready(function () {
+            $("div[data-includeHTML]").each(function () {
+                $(this).load($(this).attr("data-includeHTML"));
+            });
+        });
+    </script>
 </div>
 <!-- end header -->
