--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div data-includeHTML=".\html-common\_HeaderPartial.html"></div>
+        <div data-includeHTML="./html-common/_HeaderPartial.html"></div>
     </header>
     <!-- body -->
     <div class="container rounded-bottom">
