Fix infinite reload
Infinite reload caused by dumb mistake to use the same tag type in two elements that were cascading which the 2nd load caused the first element to reload. Now it uses ID and direct script load which makes more sense in the context

--- a/html-common/HeaderPartial.html
+++ b/html-common/HeaderPartial.html
@@ -5,13 +5,11 @@
             <h1 class="text-center">JT Mechkowski</h1>
         </div>
     </div>
-    <div data-includeHTML="./html-common/MenuPartial.html"></div>
+    <div id="menu"></div>
     <script>
         // Load Menu
         $(document).ready(function () {
-            $("div[data-includeHTML]").each(function () {
-                $(this).load($(this).attr("data-includeHTML"));
-            });
+            $("#menu").load("./html-common/MenuPartial.html");
         });
     </script>
 </div>
