--- a/html-common/MenuPartial.html
+++ b/html-common/MenuPartial.html
@@ -25,7 +25,7 @@
                       <li><a class="dropdown-item" href="#">Python</a></li>
                       <li><a class="dropdown-item" href="#">Web & Other</a></li>
                     </ul>
-                  </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">
                         Computer Networking
@@ -40,6 +40,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
     </nav>
 </div>
 <!-- end menu-->
