--- a/html-common/MenuPartial.html
+++ b/html-common/MenuPartial.html
@@ -14,16 +14,17 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Coding
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Coding
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">NodeJS Api Server's</a></li>
-                      <li><a class="dropdown-item" href="#">NodeJS Other</a></li>
-                      <li><a class="dropdown-item" href="#">Unity</a></li>
-                      <li><a class="dropdown-item" href="#">C# & .Net</a></li>
-                      <li><a class="dropdown-item" href="#">Python</a></li>
-                      <li><a class="dropdown-item" href="#">Web & Other</a></li>
+                        <li><a class="dropdown-item" href="#">NodeJS Api Server's</a></li>
+                        <li><a class="dropdown-item" href="#">NodeJS Other</a></li>
+                        <li><a class="dropdown-item" href="#">Unity</a></li>
+                        <li><a class="dropdown-item" href="#">C# & .Net</a></li>
+                        <li><a class="dropdown-item" href="#">Python</a></li>
+                        <li><a class="dropdown-item" href="#">Web & Other</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -35,6 +36,8 @@
                     <a class="nav-link active" aria-current="page" href="#">
                         Windows Platform Administration
                     </a>
+                </li>
+                <li>
                     <a class="nav-link active" aria-current="page" href="#">
                         Linux Administration
                     </a>
