Remove custom css & dynamic javascript for ease of bootstrap integration

--- a/index.html
+++ b/index.html
@@ -8,27 +8,73 @@
     <!-- latest compiled and minified CSS bootstrap 5.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="./css/common.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>JT Mechkowski's Webpage</title>
 </head>
 
 <body>
-    <header>
-        <div id="header"></div>
-    </header>
-    <!-- body -->
-    <div class="container rounded-bottom">
-        BODY
+    <!-- header -->
+    <div class="fluid-container bg-primary">
+        <div class="col-12">
+            <h1 class="text-center text-white">JT Mechkowski</h1>
+        </div>
+    <!-- menu -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class=navbar-brand href="#">JT Mechkowski</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Coding
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">NodeJS</a></li>
+                        <li><a class="dropdown-item" href="#">Unity</a></li>
+                        <li><a class="dropdown-item" href="#">C# & .Net</a></li>
+                        <li><a class="dropdown-item" href="#">Python</a></li>
+                        <li><a class="dropdown-item" href="#">Other</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Computer Networking
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Windows Platform Administration
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#">
+                        Linux Administration
+                    </a>
+                </li>
+            </ul>
+        </div>
+        </nav>
     </div>
-
-    <script>
-        // Load Header
-        $(document).ready(function () {
-            $("#header").load('./html-common/HeaderPartial.html');
-        });
-    </script>
+    <!-- end menu-->
+    <!-- end header -->
+    <!-- body -->
+    <div class="container rounded-bottom bg-primary text-white">
+        <div class="row">
+            <div class="col-12">
+                BODY
+            </div>
+        </div>
+    </div>
+    
     <!-- script for JS functional Boostrap 5.1 do not remove must be at the bottom very important -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
