--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>JT Mechkowski's Webpage</title>
+    <title>JT Mechkowski's existence</title>
 </head>
 
 <body>
     <!-- header -->
     <div class="fluid-container bg-primary">
+        <div class="row">
         <div class="col-12">
             <h1 class="text-center text-white">JT Mechkowski</h1>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h4 class="text-center text-white">Professional Technical Problem Solver</h3>
+            </div>
         </div>
     <!-- menu -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -60,6 +67,11 @@
                         Linux Administration
                     </a>
                 </li>
+                <li>
+                    <a class="nav-link" href="#">
+                        Contact Me
+                    </a>
+                </li>
             </ul>
         </div>
         </nav>
@@ -70,7 +82,15 @@
     <div class="container rounded-bottom bg-primary text-white">
         <div class="row">
             <div class="col-12">
-                BODY
+                <h5>
+                    Note that the site is still under construction, however you can find a brief summary of what i've worked on below
+                </h5>
+                <p>
+                    Who is JT Mechkowski? That's a great question. JT Mechkowski is an advanced problem solver in the modern technical space. While this seems like an incredibly broad answer, the skills above highlight the breadth of JT's skills.
+                </p>
+                <p>
+                    General skills from a technical project manager include discovery for new application deployments, learning new applications in an incredibly short period of time, understanding how the application fits into the environment, planning & executing deployment phasing, testing & building documentation, and handover processes.
+                </p>
             </div>
         </div>
     </div>
