--- a/coding/node.html
+++ b/coding/node.html
@@ -35,12 +35,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link" aria-current="page" href="#">
                         Home
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Coding
                     </a>
@@ -59,12 +59,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        Project Management & Administration
+                        Windows Platform Administration
                     </a>
                 </li>
                 <li>
                     <a class="nav-link" href="#">
-                        OS Engineering
+                        Linux Administration
                     </a>
                 </li>
                 <li>
@@ -83,8 +83,21 @@
         <div class="row">
             <div class="col-12">
                 <h5>
-                    Note that the site is still under construction, however you can find a brief summary of what i've worked on throughout the site
+                    Note that the site is still under construction, however you can find a brief summary of what i've worked on below
                 </h5>
+                <ul>
+                    <li>Blackwake Servers</li>
+                    <br />
+                    An expansive node project utilizing an Ember frontend with an express api server on the backend, including seperate processes for reaching out to the steam api & 
+                    <li>KT Tools</li>
+                    <br />
+                    A more recent node project with only an API server that is not fully fleshed out, and no front end.
+                    <li>Bitburner scripts</li>
+                    <br />
+                    Scripts from the game bitburner
+                    <li></li>
+                </ul>
+                
             </div>
         </div>
     </div>
