--- a/coding/unity.html
+++ b/coding/unity.html
@@ -59,12 +59,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        Project Management & Administration
+                        Windows Platform Administration
                     </a>
                 </li>
                 <li>
                     <a class="nav-link" href="#">
-                        OS Engineering
+                        Linux Administration
                     </a>
                 </li>
                 <li>
@@ -83,8 +83,14 @@
         <div class="row">
             <div class="col-12">
                 <h5>
-                    Note that the site is still under construction, however you can find a brief summary of what i've worked on throughout the site
+                    Note that the site is still under construction, however you can find a brief summary of what i've worked on below
                 </h5>
+                <p>
+                    Who is JT Mechkowski? That's a great question. JT Mechkowski is an advanced problem solver in the modern technical space. While this seems like an incredibly broad answer, the skills above highlight the breadth of JT's skills.
+                </p>
+                <p>
+                    General skills from a technical project manager include discovery for new application deployments, learning new applications in an incredibly short period of time, understanding how the application fits into the environment, planning & executing deployment phasing, testing & building documentation, and handover processes.
+                </p>
             </div>
         </div>
     </div>
